# ROS2_for_montering

./: README.md  my_robot_calibration.yaml
messages/: CMakeLists.txt  package.xml
messages/action/: Moveit.action  Test.action
messages/msg/: Error.msg  MiRState.msg  Robotiq2FGripperRobotOutput.msg
messages/srv/: MirAppendMission.srv  MirCancelMission.srv
mir_communication/: package.xml  setup.cfg  setup.py
mir_communication/MiR_communication/: mir_node.py
mir_communication/launch/: mir_communication.launc.py  mir_communication.launch.py  mir_service_test.launch.py
mir_communication/mir_communication/: mir_api.py  mir_node.py  send_service.py
mir_communication/resource/: mir_api.py
move_it_ur5e/: CMakeLists.txt  package.xml
move_it_ur5e/src/: moveit_action_server.cpp
moveit_f_test/: CMakeLists.txt  package.xml
moveit_f_test/src/: moveit_action_server.cpp
ros2_robotiq_urcap_control/: LICENCE  README.md  package.xml  setup.cfg  setup.py
ros2_robotiq_urcap_control/launch/: ros2_robotiq_test.launch.py  ros2_robotiq_urcap_control.launch.py
ros2_robotiq_urcap_control/ros2_robotiq_urcap_control/: open_close_node.py  robotiq_urcap_ctrl_ros2.py
sequence/: package.xml  setup.py
sequence/launch/: sequence_all.launch.py
sequence/sequence/: bt_node.py  trajectories.py
ur5e_communication/: package.xml  setup.cfg  setup.py
ur5e_communication/scripts/: simple_ur5e_publisher.py  simple_ur5e_subscriber.py  simple_ur5e_trajectory_controller.py
